[gd_scene format=3]

[ext_resource type="Script" path="res://kanban_column.gd" id="1_script"]

[node name="KanbanColumn" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
size_flags_horizontal = 3
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/InputRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add a card..."
caret_blink = true
keep_editing_on_text_submit = true

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/InputRow"]
layout_mode = 2
text = "+"
